--- a/web/src/main/resources/druid.properties
+++ b/web/src/main/resources/druid.properties
@@ -1,5 +1,5 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://192.168.10.10:3306/java-example
+url=jdbc:mysql://192.168.10.10:3306/java-example?&characterEncoding=utf-8
 username=homestead
 password=secret
 # 初始化连接数量
